fix responsive on mobile index page

--- a/src/sass/global/_buttons.scss
+++ b/src/sass/global/_buttons.scss
@@ -28,6 +28,9 @@
 		display: block;
 		line-height: 16px;
 	}
+	@media (max-width: $screen-sm-max){
+		font-size: 14px;
+	}
 }
 .btn-search{
 	position: absolute;
